fix white space in first line of definition list with multiple lines

--- a/docs/_sass/custom/custom.scss
+++ b/docs/_sass/custom/custom.scss
@@ -8,3 +8,7 @@
         width: 24rem;
     }
 }
+
+.main-content dt {
+    margin-bottom: 0;
+}
